<resources>
    <string name="app_name">CustoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros\n</string>
    <string name="price">Preço</string>
    <string name="price_per_litro">Preço por litro\n</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_litro">KM por Litro\n</string>
    <string name="total_spend">Seu gasto total sera de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>

    <string name="validation_fill_all_fields">Preencher todos os campos.</string>

    
</resources>