<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:hint="@string/distance" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="16dp"
        android:text="@string/total_km" />

    <EditText
        android:id="@+id/edit_price"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/price" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="16dp"
        android:text="@string/price_per_litro" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:hint="@string/autonomy" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="16dp"
        android:text="@string/kms_per_litro" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:text="@string/total_spend" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/total_value" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:backgroundTint="@color/teal_200"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/calculate"/>

</LinearLayout>